[gd_scene load_steps=4 format=3 uid="uid://c8mk0ccej631q"]

[ext_resource type="Theme" uid="uid://84plhwxqoe37" path="res://assets/UI/ui_theme.tres" id="1_myy7o"]
[ext_resource type="Script" path="res://scripts/ui/death_screen.gd" id="1_u7p46"]
[ext_resource type="FontFile" uid="uid://b5u6yej7600u7" path="res://assets/UI/fonts/Inter-Black.otf" id="2_gsykc"]

[node name="DeathScreen" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_u7p46")

[node name="PanelContainer" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
theme = ExtResource("1_myy7o")
theme_override_constants/margin_left = 250
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 250
theme_override_constants/margin_bottom = 200

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.694118, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_gsykc")
theme_override_font_sizes/font_size = 60
text = "You Died"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 160
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 160

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Restart" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Restart from checkpoint"

[node name="Back" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Back to main menu"

[node name="Quit" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Quit game"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
